--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenvy = "0.15.7"
+futures-util = "0.3.30"
+grammers-client = "0.6.0"
+grammers-session = "0.5.2"
+log = "0.4.22"
+simple_logger = "5.0.0"
+task = "0.0.1"
+tokio = { version = "1.38.0", features = ["full", "signal"] }
